policies/disallow-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-root-containers
spec:
  validationFailureAction: Enforce # Tu włączamy tryb blokowania! (Enforce zamiast Audit)
  background: false
  rules:
    - name: check-runasnonroot
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "DEVSCOPPS WARNING: Running containers as ROOT is strictly prohibited on this cluster! Set ‘runAsNonRoot: true’ in your manifest. (CIS Benchmark compliance)"
        pattern:
          spec:
            containers:
              - securityContext:
                  runAsNonRoot: true
